Minor changes - center allignment

--- a/art_page.html
+++ b/art_page.html
@@ -3,7 +3,9 @@
     <head>
         <title>Jason's Webpage</title>
         <link href="main.css" rel="stylesheet" type="text/css"/>
-
+        <style>
+            ol {text-align: center;}
+            </style>
     </head>
 
     <body>
