--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>Jason's Webpage</title>
         <link href="main.css" rel="stylesheet" type="text/css"/>
+        <style>
+            p {text-align: center;}
+            </style>
     </head>
 
     <body>
@@ -51,15 +54,15 @@
             </ol>
                    
         <p>
-            <strong>Hello Everyone</strong>  <br>
-            My name is Jason Cothran. I am 22 years old and live in Texas
+            <strong>Hello Everyone</strong>  <br><br>
+            My name is Jason Cothran. I am 23 years old and live in Texas.
         </p>
         <p class="secondary">
-            <strong>This is my attempt at making an HTML website.</strong>  <br>
+            <strong>This is my attempt at making an HTML website.</strong>  <br><br>
             I am relatively new to HTML but I find the process quite interesting.
         </p>
         <p id="special">
-            <strong>This is the special content</strong>  <br>
+            <strong>I graduate from UTD in a month!</strong>  <br>
             
         </p>
 
