--- a/proj_page.html
+++ b/proj_page.html
@@ -3,6 +3,9 @@
     <head>
         <title>Jason's Webpage</title>
         <link href="main.css" rel="stylesheet" type="text/css"/>
+        <style>
+        p {text-align: center;}
+        </style>
 
     </head>
 
