--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         </p>
         <p class="secondary">
             <strong>This is my attempt at making an HTML website.</strong>  <br><br>
-            I am relatively new to HTML but I find the process quite interesting.
+            I am relatively new to HTML but I find the process quite interesting. 
         </p>
         <p id="special">
-            <strong>I graduate from UTD in a month!</strong>  <br>
+            <strong>Recently graduated from UTD</strong>  <br>
             
         </p>
 
