--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
         <title>Jason's Webpage</title>
         <link href="main.css" rel="stylesheet" type="text/css"/>
         <style>
-            p {text-align: center;}
+            p {
+                text-align: left;
+            margin-left: 5%;
+            margin-right: 5%;
+        }
             </style>
     </head>
 
@@ -48,16 +52,12 @@
                 <li>Home</li>
                 <li><a href="proj_page.html">Projects</a></li>
 
-            </ul>
-            <ol>
-
-            </ol>
-                   
-        <p>
+            </ul>                   
+        <p id = "normal">
             <strong>Hello Everyone</strong>  <br><br>
             My name is Jason Cothran. I am 23 years old and live in Texas.
         </p>
-        <p class="secondary">
+        <p id="normal">
             <strong>This is my attempt at making an HTML website.</strong>  <br><br>
             I am relatively new to HTML but I find the process quite interesting. 
         </p>
