--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
         <title>Jason's Webpage</title>
         <link href="main.css" rel="stylesheet" type="text/css"/>
         <style>
-            p {
+            p,li {
                 text-align: left;
             margin-left: 5%;
             margin-right: 5%;
+        }
+        ul{
+            padding-bottom: 20px;
         }
             </style>
     </head>
@@ -40,19 +43,12 @@
         </div>
         <div class="col">Gardener
         </div>
-
     </div>
-
-
-        <p>
-        </p>
-            <img src="">
             <ul>
                 <li><a href="art_page.html">Art</a></li>
                 <li>Home</li>
                 <li><a href="proj_page.html">Projects</a></li>
-
-            </ul>                   
+            </ul>  
         <p id = "normal">
             <strong>Hello Everyone</strong>  <br><br>
             My name is Jason Cothran. I am 23 years old and live in Texas.
