--- a/art_page.html
+++ b/art_page.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Jason's Webpage</title>
+        <link rel="shortcut icon" type="image/x-icon" href="images/favicon_draft.png" />
         <link href="main.css" rel="stylesheet" type="text/css"/>
         <style>
             ol {text-align: center;}
@@ -18,17 +19,20 @@
         <h3>
            
         </h3>
-
-
-        <p>
-            
-        </p>
-
-            <ul>
+        <header>
+            <nav>
+               <li><a href="index.html">Home</a></li>
+               <li><a href="#">Blog</a></li>
+               <li><a href="#">About</a></li>
+               <li><a href="mailto:jdc160130@utdallas.edu">Contact</a></li>
+               <li><a href="#">Links</a></li>
+        </nav>
+    </header>
+            <!-- <ul>
                 <li>Art</li>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="proj_page.html">Projects</a></li>
-            </ul>
+            </ul> -->
             <p>
                 <strong>This is my recent work (2020) More can be found here: <a href="https://www.patreon.com/foxygrandpa115">Patreon</a> </strong>  <br>
             </p>
