--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Jason's Webpage</title>
+        <link rel="shortcut icon" type="image/x-icon" href="images/favicon_draft.png" />
         <link href="main.css" rel="stylesheet" type="text/css"/>
         <style>
             p,li {
@@ -33,22 +34,22 @@
                <li><a href="#">About</a></li>
                <li><a href="mailto:jdc160130@utdallas.edu">Contact</a></li>
                <li><a href="#">Links</a></li>
-
+               
         </nav>
     </header>
     <div class="row">
-        <div class="col">Artist
+        <div class="col" id="art"><a id = "link" href="art_page.html" style="text-decoration: none;">Artist</a>
         </div>
-        <div class="col">Developer
+        <div class="col" id="dev"><a id = "link" href="proj_page.html" style="text-decoration: none;">Developer</a>
         </div>
         <div class="col">Gardener
         </div>
     </div>
-            <ul>
+            <!-- <ul>
                 <li><a href="art_page.html">Art</a></li>
                 <li>Home</li>
                 <li><a href="proj_page.html">Projects</a></li>
-            </ul>  
+            </ul>   -->
         <p id = "normal">
             <strong>Hello Everyone</strong>  <br><br>
             My name is Jason Cothran. I am 23 years old and live in Texas.
