--- a/proj_page.html
+++ b/proj_page.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Jason's Webpage</title>
+        <link rel="shortcut icon" type="image/x-icon" href="images/favicon_draft.png" />
         <link href="main.css" rel="stylesheet" type="text/css"/>
         <style>
         p {text-align: center;}
@@ -19,17 +20,22 @@
         <h3>
            
         </h3>
-
-
-        <p>
-        </p>
+        <header>
+            <nav>
+               <li><a href="index.html">Home</a></li>
+               <li><a href="#">Blog</a></li>
+               <li><a href="#">About</a></li>
+               <li><a href="mailto:jdc160130@utdallas.edu">Contact</a></li>
+               <li><a href="#">Links</a></li>
+        </nav>
+    </header>
             <img src="">
-            <ul>
+            <!-- <ul>
                 <li><a href="art_page.html">Art</a></li>
                 <li><a href="index.html">Home</a></li>
                 <li>Projects</li>
 
-            </ul>
+            </ul> -->
             <ol>
                 <li><a href="#">Private Cribbage Project (Developed with two other students from UTD)</a></li>
                 <li>Fox Jump - Prototype 2D platformer meant for mobile and PC platforms</li>
@@ -40,7 +46,7 @@
         </p>
 
 <p>
-    <iframe src="https://i.simmer.io/@FoxyGrandpa/fox-jump-wip-v0-1" style="width:960px;height:600px;border:0"></iframe>
+    <iframe title="game" src="https://i.simmer.io/@FoxyGrandpa/fox-jump-wip-v0-1" style="width:960px;height:600px;border:0"></iframe>
     <br>
     (WASD or arrow keys to move, SPACE to jump)
 </br>
