--- a/Web_Dev/proj_page.html
+++ b/Web_Dev/proj_page.html
@@ -16,10 +16,15 @@
         <h3>
            
         </h3>
-
-
-        <p>
-        </p>
+        <header>
+            <nav>
+               <li>Home</li>
+               <li><a href="#">Blog</a></li>
+               <li><a href="#">About</a></li>
+               <li><a href="mailto:jdc160130@utdallas.edu">Contact</a></li>
+               <li><a href="#">Links</a></li>
+        </nav>
+    </header>
             <img src="">
             <ul>
                 <li><a href="art_page.html">Art</a></li>
