Updated Game & link
game update

--- a/proj_page.html
+++ b/proj_page.html
@@ -46,7 +46,7 @@
         </p>
 
 <p>
-    <iframe title="game" src="https://i.simmer.io/@FoxyGrandpa/fox-jump-wip-v0-1" style="width:960px;height:600px;border:0"></iframe>
+    <iframe src="https://i.simmer.io/@FoxyGrandpa/foxjumpv2-1" style="width:960px;height:600px;border:0"></iframe>
     <br>
     (WASD or arrow keys to move, SPACE to jump)
 </br>
