--- a/proj_page.html
+++ b/proj_page.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
         <title>Jason's Webpage</title>
         <link rel="shortcut icon" type="image/x-icon" href="images/favicon_draft.png" />
@@ -7,11 +7,13 @@
         <style>
         p {text-align: center;}
         </style>
-
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
-        <h1>
+        <h1 id ="banner">
             Jason's Website
         </h1>
         <h2>
@@ -29,14 +31,7 @@
                <li><a href="#">Links</a></li>
         </nav>
     </header>
-            <img src="">
-            <!-- <ul>
-                <li><a href="art_page.html">Art</a></li>
-                <li><a href="index.html">Home</a></li>
-                <li>Projects</li>
-
-            </ul> -->
-            <ol>
+            <ol class="box">
                 <li><a href="#">Private Cribbage Project (Developed with two other students from UTD)</a></li>
                 <li>Fox Jump - Prototype 2D platformer meant for mobile and PC platforms</li>
             </ol>
@@ -46,7 +41,7 @@
         </p>
 
 <p>
-    <iframe src="https://i.simmer.io/@FoxyGrandpa/foxjumpv2-1" style="width:960px;height:600px;border:0"></iframe>
+    <iframe src="https://i.simmer.io/@FoxyGrandpa/foxjumpv2-1" style="width:960px;height:600px;border:0" title="Video Game"></iframe>
     <br>
     (WASD or arrow keys to move, SPACE to jump)
 </br>
