--- a/art_page.html
+++ b/art_page.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
         <title>Jason's Webpage</title>
         <link rel="shortcut icon" type="image/x-icon" href="images/favicon_draft.png" />
@@ -7,12 +7,13 @@
         <style>
             ol {text-align: center;}
             </style>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
-        <h1>
-            Jason's Website
-        </h1>
+        <h1 id ="banner">Jason's Website</h1>
         <h2>
         
         </h2>
@@ -28,19 +29,12 @@
                <li><a href="#">Links</a></li>
         </nav>
     </header>
-            <!-- <ul>
-                <li>Art</li>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="proj_page.html">Projects</a></li>
-            </ul> -->
             <p>
                 <strong>This is my recent work (2020) More can be found here: <a href="https://www.patreon.com/foxygrandpa115">Patreon</a> </strong>  <br>
             </p>
             <ol>
                 <img src="https://i.imgur.com/JyrNrIx.jpg" alt="https://i.imgur.com/JyrNrIx.jpg" class="shrinkToFit" width="565" height="525">
                 <img src="https://i.imgur.com/ff5BNCN.jpg" alt="https://i.imgur.com/ff5BNCN.jpg" class="shrinkToFit" width="640" height="360">
-
-
             </ol>
                    
 
