--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
-<!doctype html>
-<html>
+<!doctype HTML>
+<html lang="en">
     <head>
         <title>Jason's Webpage</title>
         <link rel="shortcut icon" type="image/x-icon" href="images/favicon_draft.png" />
         <link href="main.css" rel="stylesheet" type="text/css"/>
+
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <style>
             p,li {
                 text-align: left;
             margin-left: 5%;
             margin-right: 5%;
         }
+        
         ul{
             padding-bottom: 20px;
         }
@@ -17,7 +23,7 @@
     </head>
 
     <body>
-        <h1>
+        <h1 id ="banner">
         Jason's Website
         </h1>
         <h2>
@@ -42,14 +48,9 @@
         </div>
         <div class="col" id="dev"><a id = "link" href="proj_page.html" style="text-decoration: none;">Developer</a>
         </div>
-        <div class="col">Gardener
+        <div class="col"><a id = "link" href="garden.html" style="text-decoration: none;">Gardener</a>
         </div>
     </div>
-            <!-- <ul>
-                <li><a href="art_page.html">Art</a></li>
-                <li>Home</li>
-                <li><a href="proj_page.html">Projects</a></li>
-            </ul>   -->
         <p id = "normal">
             <strong>Hello Everyone</strong>  <br><br>
             My name is Jason Cothran. I am 23 years old and live in Texas.
@@ -58,7 +59,7 @@
             <strong>This is my attempt at making an HTML website.</strong>  <br><br>
             I am relatively new to HTML but I find the process quite interesting. 
         </p>
-        <p id="special">
+        <p id="special" class="box">
             <strong>Recently graduated from UTD</strong>  <br>
             
         </p>
@@ -66,4 +67,4 @@
     </body>
 </html>
 
-<footer> ©2020 Jason's Site </footer>
+<footer style="overflow: auto;"> ©2020 Jason's Site </footer>
