--- a/proj_page.html
+++ b/proj_page.html
@@ -16,12 +16,6 @@
         <h1 id ="banner">
             Jason's Website
         </h1>
-        <h2>
-        
-        </h2>
-        <h3>
-           
-        </h3>
         <header>
             <nav>
                <li><a href="index.html">Home</a></li>
@@ -40,8 +34,8 @@
             <strong>Contains current projects that I am (slowly) working on. </strong>  <br>
         </p>
 
-<p>
-    <iframe src="https://i.simmer.io/@FoxyGrandpa/foxjumpv2-1" style="width:960px;height:600px;border:0" title="Video Game"></iframe>
+<p class="box">
+    <iframe src="https://i.simmer.io/@FoxyGrandpa/foxjumpv2-1" style="width: 100%;height:600px;border:0;" title="Video Game"></iframe>
     <br>
     (WASD or arrow keys to move, SPACE to jump)
 </br>
