--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
                <li><a href="#">Blog</a></li>
                <li><a href="#">About</a></li>
                <li><a href="mailto:jdc160130@utdallas.edu">Contact</a></li>
-               <li><a href="#">Links</a></li>
                
         </nav>
     </header>
     <div class="row">
-        <div class="col" id="art"><a id = "link" href="art_page.html" style="text-decoration: none;">Artist</a>
+        <div class="col" id="art"><a class="home" id = "link" href="art_page.html" style="text-decoration: none;">Artist</a>
         </div>
         <div class="col" id="dev"><a id = "link" href="proj_page.html" style="text-decoration: none;">Developer</a>
         </div>
