--- a/proj_page.html
+++ b/proj_page.html
@@ -1,46 +1,53 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>Jason's Webpage</title>
-        <link rel="shortcut icon" type="image/x-icon" href="images/favicon_draft.png" />
-        <link href="main.css" rel="stylesheet" type="text/css"/>
-        <style>
-        p {text-align: center;}
-        </style>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
 
-    <body>
-        <h1 id ="banner">
-            Jason's Website
-        </h1>
-        <header>
-            <nav>
-               <li><a href="index.html">Home</a></li>
-               <li><a href="#">Blog</a></li>
-               <li><a href="#">About</a></li>
-               <li><a href="mailto:jdc160130@utdallas.edu">Contact</a></li>
+<head>
+    <title>Jason's Webpage</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon_draft.png" />
+    <link href="main.css" rel="stylesheet" type="text/css" />
+    <style>
+        p {
+            text-align: center;
+        }
+    </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+    <h1 id="banner">
+        Jason's Website
+    </h1>
+    <header>
+        <nav>
+            <ul class="navigation">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="mailto:jdc160130@utdallas.edu">Contact</a></li>
+            </ul>
         </nav>
     </header>
-            <ol>
-                <li><a href="#">Private Cribbage Project (Developed with two other students from UTD)</a></li>
-                <li>Fox Jump - Prototype 2D platformer meant for mobile and PC platforms</li>
-            </ol>
-                   
-        <p>
-            <strong>Contains current projects that I am (slowly) working on. </strong>  <br>
-        </p>
+    <p>
+        Private Cribbage Project (Developed with two other students from UTD)
+        Fox Jump - Prototype 2D platformer meant for mobile and PC platforms
+    </p>
 
-<p class="box">
-    <iframe src="https://i.simmer.io/@FoxyGrandpa/foxjumpv2-1" style="width: 100%;height:600px;border:0;" title="Video Game"></iframe>
-    <br>
-    (WASD or arrow keys to move, SPACE to jump)
-</br>
-</p>
+    <p>
+        <strong>Contains current projects that I am (slowly) working on. </strong> <br>
+    </p>
 
-    </body>
+    <p class="box">
+        <iframe src="https://i.simmer.io/@FoxyGrandpa/foxjumpv2-1" style="width: 100%;height:600px;border:0;"
+            title="Video Game"></iframe>
+        <br>
+        (WASD or arrow keys to move, SPACE to jump)
+        </br>
+    </p>
+
+</body>
+
 </html>
 
 <footer> ©2020 Jason's Site </footer>
