--- a/art_page.html
+++ b/art_page.html
@@ -1,38 +1,45 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>Jason's Webpage</title>
-        <link rel="shortcut icon" type="image/x-icon" href="images/favicon_draft.png" />
-        <link href="main.css" rel="stylesheet" type="text/css"/>
-        <style>
-            ol {text-align: center;}
-            </style>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
 
-    <body>
-        <h1 id ="banner">Jason's Website</h1>
-        <header>
-            <nav>
-               <li><a href="index.html">Home</a></li>
-               <li><a href="#">Blog</a></li>
-               <li><a href="#">About</a></li>
-               <li><a href="mailto:jdc160130@utdallas.edu">Contact</a></li>
+<head>
+    <title>Jason's Webpage</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon_draft.png" />
+    <link href="main.css" rel="stylesheet" type="text/css" />
+    <style>
+        ol {
+            text-align: center;
+        }
+    </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+    <h1 id="banner">Jason's Website</h1>
+    <header>
+        <nav>
+            <ul class="navigation">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="mailto:jdc160130@utdallas.edu">Contact</a></li>
+            </ul>
         </nav>
     </header>
-            <p>
-                <strong>This is my recent work (2020) More can be found here: <a href="https://www.patreon.com/foxygrandpa115">Patreon</a> </strong>  <br>
-            </p>
-            <ol>
-                <img src="https://i.imgur.com/JyrNrIx.jpg" alt="https://i.imgur.com/JyrNrIx.jpg" class="shrinkToFit" width=80% height=80%>
-                <img src="https://i.imgur.com/ff5BNCN.jpg" alt="https://i.imgur.com/ff5BNCN.jpg" class="shrinkToFit" width=75% height=75%>
-            </ol>
-                   
+    <p>
+        <strong>This is my recent work (2020) More can be found here: <a
+                href="https://www.patreon.com/foxygrandpa115">Patreon</a> </strong> <br>
+    </p>
+    <ol>
+        <img src="https://i.imgur.com/JyrNrIx.jpg" alt="https://i.imgur.com/JyrNrIx.jpg" class="shrinkToFit">
+        <img src="https://i.imgur.com/ff5BNCN.jpg" alt="https://i.imgur.com/ff5BNCN.jpg" class="shrinkToFit">
+    </ol>
 
 
-    </body>
+
+</body>
+
 </html>
 
-<footer> ©2020 Jason's Site </footer>
+<footer class="footer"> ©2020 Jason's Site </footer>
