--- a/art_page.html
+++ b/art_page.html
@@ -20,7 +20,7 @@
     <header>
         <nav>
             <ul class="navigation">
-                <li><a href="index.html">Home</a></li>
+                <li style="width: 100%;"><a href="index.html">Home</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="mailto:jdc160130@utdallas.edu">Contact</a></li>
